Fix InlineEdit text alignment

--- a/src/components/InlineEdit/index.scss
+++ b/src/components/InlineEdit/index.scss
@@ -22,5 +22,4 @@
 
 .inline-text_input--active {
   border-bottom: 1px solid #666666;
-  text-align: left;
 }
